--- a/java_script_KG/package.json
+++ b/java_script_KG/package.json
@@ -2,6 +2,13 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^17.0.1",
+    "keycloak-js": "^26.2.3",
     "node-fetch": "^3.3.2"
+  },
+  "scripts": {
+    "dev": "vite"
+  },
+  "devDependencies": {
+    "vite": "^7.3.1"
   }
 }
